--- a/src/main/features/dashboard/views/macro/caseStatus.njk
+++ b/src/main/features/dashboard/views/macro/caseStatus.njk
@@ -18,7 +18,9 @@
   claimRejectedFreeMediationNOForClaimantDashboard,
   claimRejectedFreeMediationNOForDefendantDashboard,
   claimRejectedFreeMediationYESForClaimantDashboard,
-  claimRejectedFreeMediationYESForDefendantDashboard %}
+  claimRejectedFreeMediationYESForDefendantDashboard,
+  claimRejectedDefendantsRejectionFreeMediationNOForClaimantDashboard,
+  claimRejectedDefendantsRejectionFreeMediationYESForClaimantDashboard %}
 
 {% from "./claimStatus/claimPartAdmittedDefendant.njk" import
   claimPartAdmittedAlreadyPaidForDefendantDashboard,
@@ -121,6 +123,22 @@
         {{ claimPartAdmittedToOweForClaimantDashboard(claim) }}
       {% endif %}
     {% elif claim.response.responseType === domain.ResponseType.FULL_ADMISSION %}
+      {{ claimFullAdmissionForClaimantDashboard(claim) }}
+    {% endif %}
+  {% elif status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_REJECTION %}
+    {% if claim.response.responseType === domain.ResponseType.FULL_DEFENCE %}
+      {% if claim.response.freeMediation === FreeMediationOption.NO %}
+        {{ claimRejectedDefendantsRejectionFreeMediationNOForClaimantDashboard(claim) }}
+      {% else %}
+        {{ claimRejectedDefendantsRejectionFreeMediationYESForClaimantDashboard(claim) }}
+      {% endif %}
+      {% elif claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
+      {% if claim.response.paymentDeclaration and claim.totalAmountTillToday < claim.response.amount %}
+        {{ claimPartAdmittedAlreadyPaidForClaimantDashboard(claim) }}
+      {% else %}
+        {{ claimPartAdmittedToOweForClaimantDashboard(claim) }}
+      {% endif %}
+      {% elif claim.response.responseType === domain.ResponseType.FULL_ADMISSION %}
       {{ claimFullAdmissionForClaimantDashboard(claim) }}
     {% endif %}
   {% elif status === ClaimStatus.OFFER_SUBMITTED %}
