add details to claimant mediation dashboard

--- a/src/main/features/dashboard/views/macro/caseStatus.njk
+++ b/src/main/features/dashboard/views/macro/caseStatus.njk
@@ -127,7 +127,7 @@
     {% endif %}
   {% elif status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_DEFENCE %}
     {% if claim.response.responseType === domain.ResponseType.FULL_DEFENCE %}
-      {% if claim.response.freeMediation === FreeMediationOption.NO %}
+      {% if claim.claimantResponse.freeMediation === FreeMediationOption.NO %}
         {{ claimRejectedDefendantDefenceFreeMediationNOForClaimantDashboard(claim) }}
       {% else %}
         {{ claimRejectedDefendantDefenceFreeMediationYESForClaimantDashboard(claim) }}
