--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -159,7 +159,7 @@
       {% endif %}
     {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_DEFENCE %}
       {% if claim.response.responseType === domain.ResponseType.FULL_DEFENCE %}
-        {% if claim.response.freeMediation === FreeMediationOption.NO %}
+        {% if claim.claimantResponse.freeMediation === FreeMediationOption.NO %}
           {{ claimRejectedDefendantDefenceFreeMediationNOForClaimantDetails(claim) }}
         {% else %}
           {{ claimRejectedDefendantDefenceFreeMediationYESForClaimantDetails(claim) }}
