Added expert guidance view

--- a/src/main/features/directions-questionnaire/views/expert-guidance.njk
+++ b/src/main/features/directions-questionnaire/views/expert-guidance.njk
@@ -1,5 +1,6 @@
 {% extends "layout.njk" %}
 
+{% set heading = 'Using an expert in small claims' %}
 {% block content %}
 <div class="grid-row">
   <div class="column-two-thirds">
