change label name for error

--- a/src/main/features/directions-questionnaire/views/permission-for-expert.njk
+++ b/src/main/features/directions-questionnaire/views/permission-for-expert.njk
@@ -6,7 +6,7 @@
 {% block content %}
   <div class="grid-row">
     <div class="column-two-thirds">
-      {% set name = 'option' %}
+      {% set name = 'requestPermissionForExpert' %}
 
       <form method="post"
         class="analytics-submit-event-trigger"
