Added route test for no mediation page

--- a/src/main/features/mediation/views/no-mediation.njk
+++ b/src/main/features/mediation/views/no-mediation.njk
@@ -25,24 +25,23 @@
 
         {% set name = 'option' %}
 
-        {{
-        radioGroup(
+        {{ radioGroup(
           label = '',
           name = name,
           options = [
-          { label: t('Yes'), value: YesNoOption.YES.option, checked: (form.valueFor(name) === YesNoOption.YES) },
-          { label: t('No'), value: YesNoOption.NO.option, checked: (form.valueFor(name) === YesNoOption.NO) }
-        ],
+            { label: t('Yes'), value: YesNoOption.YES.option, checked: (form.valueFor(name) === YesNoOption.YES) },
+            { label: t('No'), value: YesNoOption.NO.option, checked: (form.valueFor(name) === YesNoOption.NO) }
+          ],
           form = form,
           labelForScreenReadersOnly = false,
           isInline = false
-        )
-        }}
+        ) }}
 
         {{ saveAndContinueButton() }}
       </form>
       {% if footnote %}
-        <p class="font-xsmall">{{ t('*Source: Small Claims Mediation Service statistics, November 2017 to October 2018.') }}</p>
+        <p
+          class="font-xsmall">{{ t('*Source: Small Claims Mediation Service statistics, November 2017 to October 2018.') }}</p>
       {% endif %}
     </div>
   </div>
