--- a/src/main/features/dashboard/views/macro/caseStatus.njk
+++ b/src/main/features/dashboard/views/macro/caseStatus.njk
@@ -20,7 +20,11 @@
   claimRejectedFreeMediationYESForClaimantDashboard,
   claimRejectedFreeMediationYESForDefendantDashboard,
   claimRejectedDefendantDefenceFreeMediationNOForClaimantDashboard,
-  claimRejectedDefendantDefenceFreeMediationYESForClaimantDashboard %}
+  claimRejectedDefendantDefenceFreeMediationNOForDefendantDashboard,
+  claimRejectedDefendantDefenceFreeMediationYESForClaimantDashboard,
+  claimRejectedDefendantDefenceFreeMediationYESForDefendantDashboard,
+  claimantAcceptedDefendantDefenceDefendantDashboard,
+  claimantAcceptedDefendantDefenceClaimantDashboard %}
 
 {% from "./claimStatus/claimPartAdmittedDefendant.njk" import
   claimPartAdmittedAlreadyPaidForDefendantDashboard,
@@ -126,21 +130,13 @@
       {{ claimFullAdmissionForClaimantDashboard(claim) }}
     {% endif %}
   {% elif status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_DEFENCE %}
-    {% if claim.response.responseType === domain.ResponseType.FULL_DEFENCE %}
-      {% if claim.claimantResponse.freeMediation === FreeMediationOption.NO %}
-        {{ claimRejectedDefendantDefenceFreeMediationNOForClaimantDashboard(claim) }}
-      {% else %}
-        {{ claimRejectedDefendantDefenceFreeMediationYESForClaimantDashboard(claim) }}
-      {% endif %}
-      {% elif claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
-      {% if claim.response.paymentDeclaration and claim.totalAmountTillToday < claim.response.amount %}
-        {{ claimPartAdmittedAlreadyPaidForClaimantDashboard(claim) }}
-      {% else %}
-        {{ claimPartAdmittedToOweForClaimantDashboard(claim) }}
-      {% endif %}
-      {% elif claim.response.responseType === domain.ResponseType.FULL_ADMISSION %}
-      {{ claimFullAdmissionForClaimantDashboard(claim) }}
+    {% if claim.claimantResponse.freeMediation === FreeMediationOption.NO %}
+      {{ claimRejectedDefendantDefenceFreeMediationNOForClaimantDashboard(claim) }}
+    {% else %}
+      {{ claimRejectedDefendantDefenceFreeMediationYESForClaimantDashboard(claim) }}
     {% endif %}
+  {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_DEFENCE %}
+    {{ claimantAcceptedDefendantDefenceClaimantDashboard() }}
   {% elif status === ClaimStatus.OFFER_SUBMITTED %}
     {{ offerSubmittedForClaimantDashboard(claim) }}
   {% elif status === ClaimStatus.OFFER_REJECTED %}
@@ -210,6 +206,14 @@
     {% elif claim.response.responseType === domain.ResponseType.FULL_ADMISSION %}
       {{ claimFullAdmissionForDefendantDashboard(claim) }}
     {% endif %}
+  {% elif status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_DEFENCE %}
+    {% if claim.claimantResponse.freeMediation === FreeMediationOption.NO %}
+      {{ claimRejectedDefendantDefenceFreeMediationNOForDefendantDashboard(claim) }}
+    {% else %}
+      {{ claimRejectedDefendantDefenceFreeMediationYESForDefendantDashboard(claim) }}
+    {% endif %}
+  {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_DEFENCE %}
+    {{ claimantAcceptedDefendantDefenceDefendantDashboard() }}
   {% elif status === ClaimStatus.OFFER_SUBMITTED %}
     {{ offerSubmittedForDefendantDashboard() }}
   {% elif status === ClaimStatus.OFFER_REJECTED %}
