Split claimant name

--- a/src/main/features/claim/views/claimant-individual-details.njk
+++ b/src/main/features/claim/views/claimant-individual-details.njk
@@ -20,7 +20,9 @@
           partyDetailsFragment(
             form,
             fields = [
-              { label: 'Full name (include title)', name: 'name' }
+              { label: 'Title', name: 'title' },
+              { label: 'First Name', name: 'firstName' },
+              { label: 'Last Name', name: 'lastName' }
             ],
             addressSection = {
               heading: 'Your postal address',
