--- a/src/main/features/mediation/views/how-mediation-works.njk
+++ b/src/main/features/mediation/views/how-mediation-works.njk
@@ -28,8 +28,12 @@
 
         <div class="form-group">
           {% if mediationPilot %}
-            {{ submitButton('Continue with free mediation', 'mediationYes') }}
+          <div class="form-group">
+            {{ linkButton('Continue with free mediation', 'mediationYes', 'button button-primary') }}
+          </div>
+          <div class="form-group">
             {{ linkButton('I don’t want to try free mediation', 'mediationNo', 'link-button') }}
+          </div>
           {% else %}
             {{ submitButton() }}
           {% endif %}
