--- a/src/main/features/response/views/your-details.njk
+++ b/src/main/features/response/views/your-details.njk
@@ -18,59 +18,56 @@
         <input type="hidden" name="type" value="{{ form.model.type }}">
 
         {% if form.model.type == 'individual' %}
-          {% if form.model.firstName !== 'undefined' %}
-            {%  set fields = [
+          {% if form.model.firstName %}
+            {% set fields = [
               { label: 'Title', name: 'title' },
               { label: 'First name', name: 'firstName' },
               { label: 'Last name', name: 'lastName' }
-            ]
-              %}
+            ] %}
           {% else %}
-            {%
-              set fields = [
+            {% set fields = [
               { readOnly: true, label: 'Full name', value: claim.claimData.defendant.name }
-            ]
-            %}
+            ] %}
           {% endif %}
 
           {% set addressSectionHeading = 'Your address' %}
-        {% elif form.model.type == 'soleTrader' %}
-          {%
-            set fields = [
+          {% elif form.model.type == 'soleTrader' %}
+          {% if form.model.firstName %}
+            {% set fields = [
+              { label: 'Title', name: 'title' },
+              { label: 'First name', name: 'firstName' },
+              { label: 'Last name', name: 'lastName' }
+            ] %}
+          {% else %}
+            {% set fields = [
               { readOnly: true, label: 'Your full name', value: claim.claimData.defendant.name },
               { readOnly: true, label: 'Business name', value: claim.claimData.defendant.businessName }
-            ]
-          %}
+            ] %}
+          {% endif %}
           {% set addressSectionHeading = 'Your address' %}
-        {% elif form.model.type == 'company' %}
-          {%
-            set fields = [
-              { readOnly: true, label: 'Company name', value: claim.claimData.defendant.name },
-              { label: 'Contact person (optional)', name: 'contactPerson' }
-            ]
-          %}
+          {% elif form.model.type == 'company' %}
+          {% set fields = [
+            { readOnly: true, label: 'Company name', value: claim.claimData.defendant.name },
+            { label: 'Contact person (optional)', name: 'contactPerson' }
+          ] %}
           {% set addressSectionHeading = 'Company address' %}
-        {% elif form.model.type == 'organisation' %}
-          {%
-            set fields = [
-              { readOnly: true, label: 'Organisation name', value: claim.claimData.defendant.name },
-              { label: 'Contact person (optional)', name: 'contactPerson' }
-            ]
-          %}
+          {% elif form.model.type == 'organisation' %}
+          {% set fields = [
+            { readOnly: true, label: 'Organisation name', value: claim.claimData.defendant.name },
+            { label: 'Contact person (optional)', name: 'contactPerson' }
+          ] %}
           {% set addressSectionHeading = 'Organisation address' %}
         {% endif %}
 
-        {{
-          partyDetailsFragment(
-            form,
-            fields = fields,
-            addressSection = {
-              heading: addressSectionHeading,
-              name: 'address'
-            },
-            showCorrespondenceAddressSection = true
-          )
-        }}
+        {{ partyDetailsFragment(
+          form,
+          fields = fields,
+          addressSection = {
+            heading: addressSectionHeading,
+            name: 'address'
+          },
+          showCorrespondenceAddressSection = true
+        ) }}
 
         {{ saveAndContinueButton() }}
       </form>
