add () to method call

--- a/src/main/features/mediation/views/how-mediation-works.njk
+++ b/src/main/features/mediation/views/how-mediation-works.njk
@@ -8,7 +8,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
 
-      {{ howMediationWorks }}
+      {{ howMediationWorks() }}
 
       <form method="post" novalidate>
         {{ csrfProtection(csrf) }}
