--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -28,7 +28,8 @@
   claimRejectedDefendantDefenceFreeMediationYESForClaimantDetails,
   claimRejectedDefendantDefenceFreeMediationYESForDefendantDetails,
   claimantAcceptedDefendantDefenceDefendantClaimDetails,
-  claimantAcceptedDefendantDefenceClaimantClaimDetails %}
+  claimantAcceptedDefendantDefenceClaimantClaimDetails,
+  claimRejectedDefendantDefenceFreeMediationNOForDefendantDetails %}
 
 {% from "./claimStatus/claimPartAdmittedDefendant.njk" import
   claimPartAdmittedToOweForDefendantClaimDetails,
