--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -124,7 +124,8 @@
       {{ claimFullAdmissionPayImmediatelyPastDeadlineForClaimantClaimDetails(claim) }}
     {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_ADMISSION_AND_REQUESTED_CCJ or
       state.status === ClaimStatus.CLAIMANT_ALTERNATIVE_PLAN_WITH_CCJ or
-      state.status === ClaimStatus.CCJ_AFTER_SETTLEMENT_BREACHED %}
+      state.status === ClaimStatus.CCJ_AFTER_SETTLEMENT_BREACHED or
+      state.status === ClaimStatus.CCJ_BY_DETERMINATION_AFTER_SETTLEMENT_BREACHED %}
       {{ admissionByCCJClaimantClaimDetails(claim) }}
     {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_ADMISSION_AND_DEFENDANT_NOT_SIGNED %}
       {{ settlementAgreementSignedByClaimantDeadlinePassedClaimDetails(claim, csrf) }}
@@ -201,7 +202,8 @@
       {{ ccjEligibleForDefendantClaimDetails(claim, csrf) }}
     {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_ADMISSION_AND_REQUESTED_CCJ %}
       {{ admissionByCCJDefendantClaimDetails(claim) }}
-    {% elif state.status === ClaimStatus.CCJ_AFTER_SETTLEMENT_BREACHED %}
+    {% elif state.status === ClaimStatus.CCJ_AFTER_SETTLEMENT_BREACHED or
+      state.status === ClaimStatus.CCJ_BY_DETERMINATION_AFTER_SETTLEMENT_BREACHED %}
       {{ CCJAfterBreakingSettlementAgreementClaimDetails(claim) }}
     {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_ADMISSION or state.status === ClaimStatus.CLAIMANT_ACCEPTED_ADMISSION_AND_DEFENDANT_NOT_SIGNED %}
       {{ settlementAgreementSignedByClaimantDefendantClaimDetails(claim) }}
